--- a/edu.css
+++ b/edu.css
@@ -225,7 +225,8 @@ main #boss table td {
   main {
     height: auto;
     width: 100%;
-    margin: auto;
+    align-items: center;
+    justify-content: center;
     overflow: hidden;
   }
 }
