--- a/edu.scss
+++ b/edu.scss
@@ -252,7 +252,8 @@ margin: auto;
 @media screen and (max-width: 576px) {
     height: auto;
     width: 100%;
-    margin: auto;
+    align-items: center;
+    justify-content: center;
     overflow: hidden;
    }
 
