--- a/edu.css
+++ b/edu.css
@@ -118,7 +118,7 @@ main .edu #komz {
 }
 main .edu #komz fieldset {
   margin-left: -43px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 main .edu #komz legend {
   margin-left: 10px;
@@ -133,12 +133,12 @@ main .edu #komz table {
   padding-left: 30px;
   margin-left: 10%;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 576px) {
   main .edu #komz table {
-    margin-left: -20px;
-    margin-right: -20px;
     width: 100%;
     height: auto;
+    margin-left: -35px;
+    margin-right: -25px;
   }
 }
 main .edu #komz table th {
@@ -155,11 +155,14 @@ main .edu #komz table td {
   background-color: #000;
   color: white;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 576px) {
   main .edu {
     width: 100%;
     height: auto;
     display: grid;
+  }
+  main .edu legend {
+    margin-left: 200px;
   }
 }
 main #boss {
@@ -172,6 +175,8 @@ main #boss {
 }
 main #boss fieldset {
   margin-left: -60px;
+  overflow: hidden;
+  margin-left: 5px;
 }
 main #boss legend {
   margin-left: 200px;
@@ -185,6 +190,12 @@ main #boss table {
   color: black;
   padding-left: 30px;
   margin-left: 10%;
+}
+@media screen and (max-width: 576px) {
+  main #boss table {
+    margin: auto;
+    width: 100%;
+  }
 }
 main #boss table th {
   font-size: 25px;
@@ -207,6 +218,13 @@ main #boss table td {
     width: 100%;
     height: auto;
     display: grid;
+  }
+  main #boss fieldset {
+    margin-left: -50px;
+    padding-left: -40px;
+  }
+  main #boss legend {
+    margin-left: 200px;
   }
 }
 @media screen and (max-width: 576px) {
