--- a/edu.css
+++ b/edu.css
@@ -135,10 +135,10 @@ main .edu #komz table {
 }
 @media screen and (max-width: 576px) {
   main .edu #komz table {
-    width: 100%;
+    width: auto;
     height: auto;
-    margin-left: -35px;
-    margin-right: -25px;
+    margin-left: -40px;
+    margin-right: -10px;
   }
 }
 main .edu #komz table th {
@@ -205,6 +205,12 @@ main #boss table th {
   background-color: #000;
   color: white;
 }
+@media screen and (max-width: 576px) {
+  main #boss table th {
+    margin: auto;
+    width: 100%;
+  }
+}
 main #boss table td {
   border-radius: 10px;
   padding-left: 5px;
@@ -213,6 +219,12 @@ main #boss table td {
   color: white;
   text-align: center;
 }
+@media screen and (max-width: 576px) {
+  main #boss table td {
+    margin: auto;
+    width: 100%;
+  }
+}
 @media screen and (max-width: 600px) {
   main #boss {
     width: 100%;
@@ -220,8 +232,7 @@ main #boss table td {
     display: grid;
   }
   main #boss fieldset {
-    margin-left: -50px;
-    padding-left: -40px;
+    margin-left: -55px;
   }
   main #boss legend {
     margin-left: 200px;
