--- a/edu.scss
+++ b/edu.scss
@@ -142,6 +142,7 @@ overflow: hidden;
         @media screen and (max-width: 576px) {
             width: auto;
             height: auto;
+            font-size: 15px;
             margin-left: -40px;
             margin-right: -10px;
         }
@@ -156,6 +157,11 @@ overflow: hidden;
 
         // margin-bottom: 10px;
          }
+         @media screen and (max-width: 576px) {
+            margin-left: -25px;
+            width: 100%;
+            font-size: 18px;
+        }
 
          td{
             border-radius: 10px;
@@ -210,6 +216,7 @@ overflow: hidden;
         @media screen and (max-width: 576px) {
             margin: auto;
             width: 100%;
+            font-size: 18px;
         }
     
     th{
@@ -223,6 +230,7 @@ overflow: hidden;
         @media screen and (max-width: 576px) {
             margin: auto;
             width: 100%;
+            font-size: 18px;
         }
 
         // margin-bottom: 10px;
