--- a/edu.scss
+++ b/edu.scss
@@ -122,8 +122,9 @@ overflow: hidden;
         margin-left: -43px;
         overflow: hidden;
         @media screen and (max-width: 576px) {
-            margin-left: -60px;
+            margin-left: -70px;
             width: 100%;
+            font-size: 10px;
         }
         
     }
