--- a/edu.css
+++ b/edu.css
@@ -122,8 +122,9 @@ main .edu #komz fieldset {
 }
 @media screen and (max-width: 576px) {
   main .edu #komz fieldset {
-    margin-left: -60px;
+    margin-left: -70px;
     width: 100%;
+    font-size: 10px;
   }
 }
 main .edu #komz legend {
