--- a/edu.scss
+++ b/edu.scss
@@ -123,7 +123,7 @@ overflow: hidden;
         overflow: hidden;
         @media screen and (max-width: 576px) {
             margin-left: -70px;
-            width: 100%;
+            width: auto;
             font-size: 10px;
         }
         
@@ -147,7 +147,7 @@ overflow: hidden;
         @media screen and (max-width: 576px) {
             width: auto;
             height: auto;
-            font-size: 15px;
+            font-size: 20px;
             margin-left: -40px;
             margin-right: -10px;
         }
@@ -165,7 +165,7 @@ overflow: hidden;
          @media screen and (max-width: 576px) {
             margin-left: -25px;
             width: 100%;
-            font-size: 18px;
+            font-size: 20px;
         }
 
          td{
@@ -183,7 +183,7 @@ overflow: hidden;
     height: auto;
     display: grid;
     margin: auto;
-    font-size: 18px;
+    font-size: 28px;
 
     legend{
         margin-left: 200px;
@@ -205,6 +205,9 @@ overflow: hidden;
         margin-left: -60px;
         overflow: hidden;
         margin-left: 5px;
+        @media screen and (max-width: 576px) {
+            width: auto;
+        }
     }
 
     legend{
@@ -223,7 +226,7 @@ overflow: hidden;
         @media screen and (max-width: 576px) {
             margin: auto;
             width: 100%;
-            font-size: 18px;
+            font-size: 20px;
         }
     
     th{
@@ -237,7 +240,7 @@ overflow: hidden;
         @media screen and (max-width: 576px) {
             margin: auto;
             width: 100%;
-            font-size: 18px;
+            font-size: 20px;
         }
 
         // margin-bottom: 10px;
