--- a/edu.scss
+++ b/edu.scss
@@ -152,7 +152,7 @@ overflow: hidden;
             margin-right: -10px;
         }
     
-    th{
+    tr{
         font-size: 25px;
         padding: 10px;
         line-height: 30px;
