--- a/edu.css
+++ b/edu.css
@@ -122,7 +122,8 @@ main .edu #komz fieldset {
 }
 @media screen and (max-width: 576px) {
   main .edu #komz fieldset {
-    margin-left: -70px;
+    margin-left: -63px;
+    margin-right: -70px;
     width: auto;
     font-size: 10px;
   }
@@ -130,6 +131,7 @@ main .edu #komz fieldset {
 main .edu #komz legend {
   margin-left: 10px;
   color: rgb(165, 42, 42);
+  font-size: 20px;
 }
 main .edu #komz table {
   width: auto;
